# cuda-stuff

./: .Makefile.swp  .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile-backup  README.md  build.bat  clean.bat  main.cu  run.sh  test.bat  vars.bat
Default/: main.d  makefile  regulus  sources.mk  subdir.mk
Default/src/: helpers.d  subdir.mk  tetra.d
Default/test/: math.d  orientation.d  subdir.mk
cmake.modules/: ParseAndAddCatchTests.cmake
debug/: CMakeLists.txt  build.bat  run.bat
include/: array.hpp  cartesian-point-set.hpp  catch.hpp  common.hpp  device-vector-forward-declaration.hpp  domain.hpp  enable_if.hpp  globals.hpp  helpers.hpp  index_t.hpp  math.hpp  maybe-int.hpp  mesher.hpp  point-set.hpp  point.hpp  size_type.hpp  stack-vector.hpp  tetra.hpp  timer.hpp
include/lib/: calc-ta-and-pa.hpp  fract-locations.hpp  fracture.hpp  get-assoc-size.hpp  init-ta-and-pa.hpp  mark-nominated-tetra.hpp  nominate.hpp  redistribute-pts.hpp  set-internal-fract-adjacencies.hpp
include/math/: equals.hpp  math.hpp  matrix.hpp  point.hpp  rand-int-range.hpp  tetra.hpp  vector.hpp
include/regulus/: access.hpp  array.hpp  dbldbl_point.hpp  globals.hpp  is_point.hpp  loc.hpp  matrix.hpp  mesh.hpp  orientation.hpp  point.hpp  point_t.hpp  point_traits.hpp  tetra.hpp  tetra_t.hpp  tetra_traits.hpp  type_traits.hpp  vector.hpp
include/regulus/algorithm/: assoc_locations.hpp  build_root_tetrahedron.hpp  fract_locations.hpp  fracture.hpp  insphere.hpp  location.hpp  make_assoc_relations.hpp  mark_nominated_tetra.hpp  nominate.hpp  orient.hpp  orientation.hpp  redistribute_pts.hpp  redistribution_cleanup.hpp
include/regulus/utils/: dbldbl.hpp  dist_from_plane.hpp  equals.hpp  gen_cartesian_domain.hpp  make_point.hpp  make_rand_range.hpp  numeric_limits.hpp  round_to.hpp
include/regulus/views/: README.md  array_view.hpp  span.hpp
math/: math.hpp  tet-math.hpp
regulus-2/: main.cu
regulus-2/Default/: main.d  makefile  regulus-2  sources.mk  subdir.mk
regulus-2/Default/src/: peano.d  subdir.mk  triangulate.d
regulus-2/Default/tests/: domain-tests.d  subdir.mk  test-suite.d
regulus-2/src/: common.hpp  triangulate.cu
regulus-2/tests/: test-suite.cpp
release/: CMakeLists.txt  CMakeLists.txt_old  build.bat  main.cu
src/: assoc_locations.cu  common.cu  domain.cu  domain.hpp  fract-locations.cu  fract_locations.cu  fracture.cu  fracture_old.cu  get-assoc-size.cu  globals.cu  helpers.cu  mark-nominated-tetra.cu  mark_nominated_tetra.cu  nominate.cu  nominate_old.cu  peano.cpp  peano.cu  point.cu  rand-int-range.cu  redistribution_cleanup.cu  set-internal-fract-adjacencies.cu  tetra.cu
test/: math.cu  orientation.cu  point-set.cu  test.hpp  tet.cu
tests/: array-tests.cu  array_tests.cu  array_view_tests.cu  bigger_nomination_tests.cu  build_root_tetrahedron_tests.cu  domain-tests.cpp  domain-tests.cu  equals.cu  fract-location-tests.cu  fract_locations_tests.cu  fracture-tests.cu  fracture_tests.cu  get-assoc-size-tests.cu  index_t-tests.cu  make_assoc_relations_tests.cu  mark_nominated_tetra_tests.cu  math-tests.cu  matrix-tests.cu  matrix_tests.cu  mesher-tests.cu  nomination-tests.cu  nomination-tests_old.cu  nomination_tests.cu  numeric_stability_tests.cu  rand_tests.cu  redistribute-pts-tests.cu  redistribute_pts_tests.cu  redistribution_cleanup_tests.cu  set-internal-fract-adjacencies.cu  span_tests.cu  stack-vector-tests.cu  test-suite.cu  test-suite.hpp  tetra-tests.cu  tetra_tests.cu  vector-tests.cu  vector_tests.cu
